Fix Windows path separator in release workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,7 +33,7 @@ jobs:
           - os: windows-latest
             TARGET: windows
             CMD_BUILD: pyinstaller --onefile --clean --name boosty-milker src/main.py
-            OUT_PATH: dist\boosty-milker.exe
+            OUT_PATH: dist/boosty-milker.exe
             ASSET_NAME: boosty-milker-windows.exe
 
     steps:
